src/snapshots/cards__game__tests__a_game_can_start_and_a_player_can_buy_something-2.snap
---
source: src/game.rs
expression: "(game.players, game.supply)"
---
(
    [
        (
            "Player 1",
            PlayArea {
                deck: [],
                hand: [
                    [Copper],
                    [Copper],
                    [Copper],
                    [Copper],
                    [Copper],
                ],
                in_play: [],
                discard: [
                    [Copper],
                    [Copper],
                    [Copper],
                    [Estate],
                    [Estate],
                    [Estate],
                ],
                shuffler: NoShuffle,
            },
            BuyPriority {
                priorities: [
                    [Copper],
                ],
            },
        ),
    ],
    Supply {
        supply_piles: [
            [
                "2 [Copper]",
            ],
            [],
        ],
    },
)
