src/snapshots/cards__game__tests__a_game_can_start_and_a_player_can_buy_something.snap
---
source: src/game.rs
expression: testlog.dump()
---
DrawCards(0)
Shuffle
DrawCards(5)
turn: Player 1
  buy phase: 
    CardPlayed([Copper], [1A 1B 1C])
    CardPlayed([Copper], [1A 1B 2C])
    CardBoughtGained([Copper])
  cleanup: 
    DrawCards(5)
