src/snapshots/cards__game__tests__can_buy_duchies_with_a_cheap_strategy-2.snap
---
source: src/game.rs
expression: "(game.players, game.supply)"
---
(
    [
        (
            "Player 1",
            PlayArea {
                deck: [
                    "1 [Duchy]",
                    "3 [Copper]",
                ],
                hand: [
                    [Copper],
                    [Copper],
                    [Copper],
                    [Copper],
                    [Estate],
                ],
                in_play: [],
                discard: [
                    [Copper],
                    [Copper],
                    [Copper],
                    [Estate],
                    [Estate],
                    [Duchy],
                ],
            },
            BuyPriority {
                priorities: [
                    [Duchy],
                    [Silver],
                    [Copper],
                ],
            },
        ),
    ],
    Supply {
        supply_piles: [
            [],
            [],
            [
                "1 [Duchy]",
            ],
        ],
    },
)
