src/snapshots/cards__game__tests__can_buy_duchies_with_a_cheap_strategy.snap
---
source: src/game.rs
expression: testlog.dump()
---
DrawCards(0)
Shuffle
DrawCards(5)
turn: player_name="Player 1", turn_counter=1
  action phase: 
  buy phase: 
    CardPlayed([Copper], [1A 1B 1C])
    CardPlayed([Copper], [1A 1B 2C])
    CardBoughtGained([Copper])
  cleanup: 
    DrawCards(5)
turn: player_name="Player 1", turn_counter=2
  action phase: 
  buy phase: 
    CardPlayed([Copper], [1A 1B 1C])
    CardPlayed([Copper], [1A 1B 2C])
    CardPlayed([Copper], [1A 1B 3C])
    CardPlayed([Copper], [1A 1B 4C])
    CardPlayed([Copper], [1A 1B 5C])
    CardBoughtGained([Duchy])
  cleanup: 
    DrawCards(0)
    Shuffle
    DrawCards(5)
turn: player_name="Player 1", turn_counter=3
  action phase: 
  buy phase: 
    CardPlayed([Copper], [1A 1B 1C])
    CardPlayed([Copper], [1A 1B 2C])
    CardPlayed([Copper], [1A 1B 3C])
    CardPlayed([Copper], [1A 1B 4C])
    CardPlayed([Copper], [1A 1B 5C])
    CardBoughtGained([Duchy])
  cleanup: 
    DrawCards(5)
turn: player_name="Player 1", turn_counter=4
  action phase: 
  buy phase: 
    CardPlayed([Copper], [1A 1B 1C])
    CardBoughtGained([Copper])
  cleanup: 
    DrawCards(2)
    Shuffle
    DrawCards(3)
turn: player_name="Player 1", turn_counter=5
  action phase: 
  buy phase: 
    CardPlayed([Copper], [1A 1B 1C])
    CardPlayed([Copper], [1A 1B 2C])
    CardBoughtGained([Copper])
  cleanup: 
    DrawCards(5)
