src/snapshots/cards__game__tests__one_player_beats_another_buy_eventually_buying_enough_duchies-2.snap
---
source: src/game.rs
expression: results
---
P1 [GFD]: 0 points
  [Copper] x16
  [Duchy] x12
  [Estate] x3
  [Silver] x8

P2 [ABC]: 0 points
  [Copper] x35
  [Estate] x3


