src/snapshots/cards__game__tests__one_player_beats_another_buy_eventually_buying_enough_duchies.snap
---
source: src/game.rs
expression: log.dump()
---
Todo("draws 0 cards, shuffles their deck, and draws 5 more")
Todo("draws 0 cards, shuffles their deck, and draws 5 more")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 0 cards, shuffles their deck, and draws 5 more")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 0 cards, shuffles their deck, and draws 5 more")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 2 cards, shuffles their deck, and draws 3 more")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 2 cards, shuffles their deck, and draws 3 more")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Silver]")
Todo("draws 4 cards, shuffles their deck, and draws 1 more")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 4 cards, shuffles their deck, and draws 1 more")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Silver]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 6C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 1 cards, shuffles their deck, and draws 4 more")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 1 cards, shuffles their deck, and draws 4 more")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Silver]")
Todo("draws 4 cards, shuffles their deck, and draws 1 more")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 4 cards, shuffles their deck, and draws 1 more")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 4C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 2 cards, shuffles their deck, and draws 3 more")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 2 cards, shuffles their deck, and draws 3 more")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Silver]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Silver]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 4C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 1 cards, shuffles their deck, and draws 4 more")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 1 cards, shuffles their deck, and draws 4 more")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Silver]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Silver]")
Todo("P1 [GFD] gained a [Silver]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 4C] P1 [GFD] played a [Silver]")
Todo("P1 [GFD] gained a [Silver]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 2C] P1 [GFD] played a [Silver]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 6C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 1 cards, shuffles their deck, and draws 4 more")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 1 cards, shuffles their deck, and draws 4 more")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 2C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 3C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 4C] P1 [GFD] played a [Copper]")
Todo("[1A 1B 5C] P1 [GFD] played a [Copper]")
Todo("P1 [GFD] gained a [Duchy]")
Todo("draws 5 cards")
Todo("[1A 1B 1C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 2C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 3C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 4C] P2 [ABC] played a [Copper]")
Todo("[1A 1B 5C] P2 [ABC] played a [Copper]")
Todo("P2 [ABC] gained a [Copper]")
Todo("draws 5 cards")
